# WinUI3CppWinRTDemo

./: .gitignore  LICENSE  OCRTranslator.sln  README.md
OCR/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  BlankWindow.idl  BlankWindow.xaml  BlankWindow.xaml.cpp  BlankWindow.xaml.h  CaptureHelper.cpp  CaptureHelper.h  ConfigPage.idl  ConfigPage.xaml  ConfigPage.xaml.cpp  ConfigPage.xaml.h  DoubleToThicknessConverter.cpp  DoubleToThicknessConverter.idl  FormalOverlay.idl  FormalOverlay.xaml  FormalOverlay.xaml.cpp  FormalOverlay.xaml.h  LanguageItem.cpp  LanguageItem.idl  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  MicaPage.idl  MicaPage.xaml  MicaPage.xaml.cpp  MicaPage.xaml.h  NavigationPage.idl  NavigationPage.xaml.cpp  NavigationPage.xaml.h  NewOverlay.idl  NewOverlay.xaml  NewOverlay.xaml.cpp  NewOverlay.xaml.h  OCR.vcxproj  OCR.vcxproj.filters  OCROverlay.idl  (+41 more)
OCR/Common/: CaptureHelper.h  LoggingManager.cpp  LoggingManager.h  StringHelper.cpp  TranslateHelper.h  WindowHelper.cpp  WindowHelper.h  WindowManager.h  winrt_functor.cpp  winrt_functor.h
OCR/Controls/: ConfigPage.idl  ConfigPage.xaml  ConfigPage.xaml.cpp  ConfigPage.xaml.h  NavigationPage.idl  NavigationPage.xaml  NavigationPage.xaml.h  OverlayPanel.idl  OverlayPanel.xaml.cpp  OverlayPanel.xaml.h  WindowConfigPage.idl  WindowConfigPage.xaml  WindowConfigPage.xaml.cpp  WindowConfigPage.xaml.h
OCR/Converters/: DoubleToThicknessConverter.h  StringFormatter.cpp
OCR/Models/: LanguageItem.cpp  LanguageItem.h  SharedItem.cpp  (+1 more)
translator/: pyproject.toml  translate_wrapper.py
