[tool.poetry]
name = "translator"
version = "0.1.0"
description = ""
authors = ["ACGMN <ootopoo@vip.qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
argostranslate = "^1.8.0"
torch = { url = "https://mirrors.aliyun.com/pytorch-wheels/cu118/torch-2.0.1+cu118-cp310-cp310-win_amd64.whl" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
